# Revisit_FSA

./: .gitignore  README.md  pyproject.toml  requirements.txt
Notebooks/: correlation_analysis.ipynb
dataset/: README.md
notebook/: Backtrader.ipynb  DirectionSplitSentiment.ipynb  EngineeredTrendFeatures.ipynb  IntensitySplit.ipynb  LSTM_Impact_Compare.ipynb  LSTM_Predictor.ipynb  LSTM_SVM_AutoEncoder.ipynb  LogisticRegresstionPredictor.ipynb  ccf_analysis.ipynb  confirmations_labeling.ipynb  correlation_analysis.ipynb  cross_validated_tbl.ipynb  cryptoBert_shap_v3.ipynb  event_crawl.ipynb  experiment_1.ipynb  experiment_2.ipynb  experiment_2_colab.ipynb  experiment_3.ipynb  get_slice.ipynb  impact_aware_embeddings.ipynb  impact_aware_embeddings_mahdi.ipynb  impact_mean.csv  notebooka4ca9306da(3).ipynb  optimized_triple_barrier_labeling.ipynb  price&sentiment.ipynb  resampled_sentiment.npy  sampling.ipynb  time_&_price_aware_embeddings.ipynb  triple_barrier_labeling.ipynb  visualization.ipynb
raw/: README.md
src/: dataset.py  experiment.py  labeler.py  mixins.py  model.py  run.py  type.py
src/util/: dataset.py  decorator.py  labeling.py
util/: __init__.py  eda.py  labeling.py
utils/: eda.py
